[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/xolonium-fonts-4.1/ttf/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/KeyChangeMenu.gd" type="Script" id=2]
[ext_resource path="C:/Users/Lone Wolf/Projects/Godot/GodotGameBase/assets/fonts/xolonium-fonts-4.1/ttf/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://objects/KeyChangeEntry.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=2]
size = 60
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 96
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
use_filter = true
font_data = ExtResource( 3 )

[node name="KeyChangeMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0823529, 0.0862745, 0.12549, 0.980392 )

[node name="Back" type="Button" parent="."]
margin_left = 176.0
margin_top = 68.0
margin_right = 457.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 2 )
text = "< Back"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.210185
margin_left = -349.0
margin_right = 350.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 1 )
text = "Change Keys"
align = 1
valign = 1

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -784.0
margin_top = -849.0
margin_right = 784.0

[node name="Scroll" type="ScrollContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scroll_horizontal_enabled = false

[node name="KeyList" type="VBoxContainer" parent="Panel/Scroll"]
margin_right = 1568.0
margin_bottom = 849.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 24

[node name="Label" type="Label" parent="Panel/Scroll/KeyList"]
margin_right = 1568.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
text = "LMB: Attack | RMB: Roll"
align = 1

[node name="AlwaysFaceEnemies" parent="Panel/Scroll/KeyList" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_top = 82.0
margin_right = 1568.0
margin_bottom = 146.0
script = null

[node name="Label" parent="Panel/Scroll/KeyList/AlwaysFaceEnemies" index="0"]
margin_left = 438.0
margin_right = 944.0
text = "Always Face Enemy"

[node name="Button" parent="Panel/Scroll/KeyList/AlwaysFaceEnemies" index="1"]
margin_left = 948.0
margin_right = 1130.0
toggle_mode = false

[connection signal="button_up" from="Back" to="." method="_on_Back_button_up"]
[connection signal="button_up" from="Panel/Scroll/KeyList/AlwaysFaceEnemies/Button" to="." method="_on_AlwaysFaceEnemy_button_up"]
[connection signal="ready" from="Panel/Scroll/KeyList/AlwaysFaceEnemies/Button" to="." method="_on_AlwaysFaceEnemy_ready"]

[editable path="Panel/Scroll/KeyList/AlwaysFaceEnemies"]
